--- a/templates/index.html
+++ b/templates/index.html
@@ -68,8 +68,8 @@
         <hr>
 
         <div class="container">
-            <h5>Made by Tanvi</h5>
-            <a href="https://github.com/tanvi355"><i class="fab fa-github fa-2x" style="color:black"></i></a>
+            <h5>Made by Pankaj</h5>
+            <a href="https://github.com/Pankajp1997"><i class="fab fa-github fa-2x" style="color:black"></i></a>
         </div>
 
     </body>
